fixed overlapping image

--- a/assets/css/components/component_specific/documentation/markdown-block.scss
+++ b/assets/css/components/component_specific/documentation/markdown-block.scss
@@ -27,4 +27,8 @@
 		list-style-type: circle;
 		margin-left: 18px;
 	}
+
+	img {
+		max-width: 100%;
+	}
 }
